<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/eventFragment"
            android:enabled="true"
            android:icon="@drawable/home"
            android:contentDescription="@string/events"
            android:title="@string/events" />
    <item
            android:id="@+id/reportFragment"
            android:enabled="true"
            android:icon="@drawable/report"
            android:contentDescription="@string/report"
            android:title="@string/report" />
    <item
            android:id="@+id/userFragment"
            android:enabled="true"
            android:icon="@drawable/profile"
            android:contentDescription="@string/user"
            android:title="@string/user" />
</menu>