<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.reportDetail.ReportDetailFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/report_scroll_view">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="15dp"
            android:paddingVertical="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/report_username_text_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:enabled="false"
                android:hint="@string/reporter_username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/report_username_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/report_detail_text_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:enabled="false"
                android:hint="@string/report_details">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/report_detail_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:minLines="6"
                    android:singleLine="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/reportImageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/reported_image"
                android:scaleType="centerCrop"
                android:src="@drawable/bbb_logo_green" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/report_location_text_field"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:hint="@string/location">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/report_location_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="emailAddress"
                        android:enabled="false"
                        android:fontFamily="@font/quicksand_regular"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/locationIcon"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/location_icon"
                    android:src="@drawable/locationpicker" />

            </LinearLayout>

            <Button
                android:id="@+id/VerifyAndCreateBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:text="@string/verify_create_event" />

            <Button
                android:id="@+id/RejectBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reject" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>