<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button
            android:id="@+id/dialog_cancel_button"
            android:contentDescription="@string/cancel"
            app:icon="@drawable/ic_clear_icon"
            app:iconSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.IconButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="5dp" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="50dp"
            android:paddingVertical="50dp"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/are_you_sure_you_want_to_delete_this_event"
                android:textAlignment="center"
                android:fontFamily="@font/quicksand_regular"
                android:textStyle="bold"
                android:layout_marginBottom="20dp" />


        <Button
                android:id="@+id/dialog_delete_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                android:paddingHorizontal="20dp"
                android:fontFamily="@font/bitter_regular"
                android:textAllCaps="false"
                android:letterSpacing="0"
                android:text="@string/delete" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>